# demo-server

./: .gitignore  Cargo.toml  default.nix  flake.nix  justfile  module.nix  readme.md  shell.nix
.github/scripts/: init-db.sh  init-service.sh
.github/workflows/: test.yml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs  main.rs  posts.rs
crates/http/: Cargo.toml
crates/http/src/: lib.rs
crates/http/src/routes/: mod.rs  posts.rs
crates/utils/: Cargo.toml
crates/utils/src/: config.rs  error.rs  lib.rs
