[package]
name = "cli"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
# Relative Dependencies
http = { path = "../http" }
utils = { path = "../utils" }

# Third party dependencies
clap = { version = "4.5.28", features = ["derive"] }
actix-web = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
toml = { workspace = true }
