[package]
name = "http"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Relative Dependencies
utils = { path = "../utils" }
database = { path = "../database" }

actix-web = { workspace = true }
env_logger = "0.11.6"
